Configure Spark test JVM