@@ -15,6 +15,8 @@ lazy val root = (project in file("."))
       "com.databricks"    %% "spark-xml"    % "0.18.0",
       "org.scalatest"     %% "scalatest"    % "3.2.19" % Test,
     ),
+    Test / fork := true,
+    Test / javaOptions += "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
     assembly / assemblyMergeStrategy := {
       case PathList("META-INF", "services", _*) => MergeStrategy.concat
       case PathList("META-INF", _*)             => MergeStrategy.discard
